# 16-662-Catching-Robot

./: lookup_table_5cm.p  lookup_table_5cm_raw.p  pose_start.txt  rviz_ball.rviz
scripts/: ball_tracking_mask.py  convert_lookup_table.py  fake_ball.py  lookup_table_gen.py  run_dynamic_joints.py  run_dynamic_pose.py  run_underhand_catch.py  run_underhand_catch2.py  run_visual_servo.py  test_frankpy_speed.py
src/detect/: CMakeLists.txt  package.xml
src/detect/calib/: azure_kinect_overhead_to_world.tf
src/detect/launch/: cat.launch
src/detect/src/: detect_node.cpp  detect_with_estimation.cpp
